Start Implementing the CheckCopySelfConfigurationProtocol